# Atlas-Ycsb

./: Cargo.toml  env  env_cli  env_id  env_replica  run
rust/: .gitignore  Cargo.toml  compile  generate_conf_cop  run
rust/src/: common.rs  cop.rs  exec.rs  local.rs  main.rs
rust/src/generator/: mod.rs
rust/src/schemas/: messages.capnp
rust/src/serialize/: mod.rs
src/: main.rs
