[package]
name = "atlas-ycsb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
bytes = "1.5.0"
rand_core = "0.6.4"
rand_seeder="*"
rand_xoshiro = "*"
memmap = "0.7.0"
csv = "1.3.0"
serde = {version = "*", features = ["derive"]}
